--- a/package.json
+++ b/package.json
@@ -1,22 +1,78 @@
 {
-  "name": "projectparadise",
-  "version": "1.0.0",
-  "description": "A presentational website with whitelist requests system and simple admin panel for managing it.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aktyn/ProjectParadise.git"
-  },
-  "author": "Aktyn",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/Aktyn/ProjectParadise/issues"
-  },
-  "homepage": "https://github.com/Aktyn/ProjectParadise#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+	"name": "projectparadise",
+	"version": "1.0.1",
+	"description": "A presentational website with whitelist requests system and simple admin panel for managing it.",
+	"main": "sources/server/main.ts",
+	"sideEffects": [
+		"**/*.css",
+		"**/*.scss"
+	],
+	"scripts": {
+		"client:dev": "webpack-dev-server --config ./webpack.config.js",
+		"client:publish": "rm -rf ./dist/client && NODE_ENV='production' webpack --config ./webpack.config.js -p",
+		"server:dev": "NODE_ENV=dev nodemon --watch sources/server/ --watch sources/common/ --exec 'tsc -p ./sources/server/tsconfig.json && node ./dist/server/main.js' -e ts",
+		"server:publish": "rm -rf ./dist/server && rm -rf ./dist/common && NODE_ENV=prod tsc -p ./sources/server/tsconfig.json",
+		"server:run": "NODE_ENV=prod node dist/server/main.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Aktyn/ProjectParadise.git"
+	},
+	"author": "Aktyn",
+	"license": "UNLICENSED",
+	"bugs": {
+		"url": "https://github.com/Aktyn/ProjectParadise/issues"
+	},
+	"homepage": "https://github.com/Aktyn/ProjectParadise#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"express": "^4.17.1",
+		"mongodb": "^3.2.7",
+		"mysql": "^2.17.1",
+		"prompt-sync": "^4.1.7",
+		"react": "^16.8.6",
+		"react-chartjs-2": "^2.7.6",
+		"react-dom": "^16.8.6",
+		"react-image-gallery": "^0.8.18",
+		"react-router-dom": "^4.3.1"
+	},
+	"devDependencies": {
+		"@types/body-parser": "^1.17.0",
+		"@types/express": "^4.17.0",
+		"@types/mongodb": "^3.1.30",
+		"@types/mysql": "^2.15.6",
+		"@types/node": "^10.14.13",
+		"@types/react": "^16.8.23",
+		"@types/react-chartjs-2": "^2.5.7",
+		"@types/react-dom": "^16.8.5",
+		"@types/react-image-gallery": "^0.8.4",
+		"@types/react-loadable": "^5.5.1",
+		"@types/react-router-dom": "^4.3.4",
+		"@types/webpack-env": "^1.14.0",
+		"autoprefixer": "^9.6.1",
+		"base-href-webpack-plugin": "^2.0.0",
+		"css-loader": "^2.1.1",
+		"fast-sass-loader": "^1.5.0",
+		"file-loader": "^3.0.1",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"image-webpack-loader": "^4.6.0",
+		"mini-css-extract-plugin": "^0.5.0",
+		"node-sass": "^4.12.0",
+		"nodemon": "^1.19.1",
+		"postcss-loader": "^3.0.0",
+		"raw-loader": "^3.1.0",
+		"react-loadable": "^5.5.0",
+		"resolve-url-loader": "^3.1.0",
+		"robotstxt-webpack-plugin": "^6.0.0",
+		"sass-loader": "^7.1.0",
+		"style-loader": "^0.23.1",
+		"ts-loader": "^6.0.4",
+		"typescript": "^3.5.3",
+		"uglifyjs-webpack-plugin": "^2.1.3",
+		"url-loader": "^1.1.2",
+		"webpack": "^4.38.0",
+		"webpack-cli": "^3.3.6",
+		"webpack-dev-server": "^3.7.2"
+	}
 }
